--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,48 @@ body {
   color: #fff;
   background: #000;
 }
+.side-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100vh;
+  background: rgba(20, 20, 20, 0.9);
+  backdrop-filter: blur(10px);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 10000;
+  overflow: hidden;
+}
+.side-nav-content {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.side-nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.side-nav-closebtn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+.side-nav-closebtn-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+}
 
 /* Floating Navbar */
 .navbar {
@@ -38,6 +80,12 @@ body {
   margin: 0 auto;
 }
 
+.nav-container  ul {
+  display: none;
+  gap: 10px;
+  flex-direction: row;
+  list-style: none;
+}
 .navbar .logo {
   font-size: 1.2rem;
   font-weight: bold;
@@ -49,10 +97,7 @@ nav {
   gap: 1.2rem;
 }
 
-.cursor::after{
-  content: " ";
-  animation: dot-loading 1s infinite;
-}
+
 @keyframes dot-loading {
   0% {
     content: "/";
@@ -85,7 +130,7 @@ pre {
   text-align: center;
   padding: 6rem 2rem;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
-    url("../img/macos.jpg") center center/cover;
+    url("../img/macos.webp") center center/cover;
   background-blend-mode: darken;
   flex-direction: column;
 }
@@ -135,6 +180,7 @@ pre {
   margin-right: auto;
 }
 
+
 .feature-card {
   background: #1c1c1c;
   padding: 1.5rem;
@@ -150,11 +196,8 @@ pre {
 .feature-card h3 {
   margin-bottom: 0.5rem;
 }
-.feature-card .f-ic {
-  font-size: 3rem;
-  margin: 15px 0;
-}
 .feature-card pre {
+  width: 100%;
   margin-top: 10px;
   background: #111;
   padding: 10px;
@@ -235,6 +278,15 @@ footer .copyright {
 .footer-content {
   max-width: 600px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar ul {
+    display: flex;
+  }
+  .navbar .ph-list {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1024px) {
